# PEPI2

./: CMakeLists.txt  PEPI2.cc  README  detmask_config.in  geometry_config.in  gps.in
analysis/: image_preview.ipynb  parallel_calculation.ipynb
analysis/images/: image__d0.5m_a15um_p62um_step-4.2_dith23.25_th1_10000eV_2.raw
data/: Graphite_delta.txt  Nylon_delta.txt  PMMA_delta.txt  Polycharbonate_delta.txt  Silicon_delta.txt  Water_delta.txt
include/: ActionInitialization.hh  EventAction.hh  PepiController.hh  PepiControllerMessenger.hh  PepiDetectorConstruction.hh  PepiDetectorMessenger.hh  PepiPSPixiRad.hh  PepiPhysicsList.hh  PepiPhysicsListMessenger.hh  PepiPhysicsXrayRefraction.hh  PepiRun.hh  PepiXrayRefraction.hh  PrimaryGeneratorAction.hh  RunAction.hh
mac/: init_vis.mac  run1.mac  run2.mac  vis.mac
spectra/: 100kV42deg1Air0.5Be0.5Al.in  40kV42deg1Air0.5Be0.5Al.in  50kV42deg1Air0.5Be0.5Al.in  60kV42deg1Air0.5Be0.5Al.in  70kV42deg1Air0.5Be0.5Al.in  80kV42deg1Air0.5Be0.5Al.in  90kV42deg1Air0.5Be0.5Al.in
src/: ActionInitialization.cc  EventAction.cc  PepiController.cc  PepiControllerMessenger.cc  PepiDetectorConstruction.cc  PepiDetectorMessenger.cc  PepiPSPixiRad.cc  PepiPhysicsList.cc  PepiPhysicsListMessenger.cc  PepiPhysicsXrayRefraction.cc  PepiRun.cc  PepiXrayRefraction.cc  PrimaryGeneratorAction.cc  RunAction.cc
